--- a/bachillerato.html
+++ b/bachillerato.html
@@ -141,35 +141,34 @@
             <!-- Grid row -->
             <div class="row">
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-12 col-sm-6 col-lg mb-4">
                     <img src="images/english.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Inglés</h5>
                     <h5 class="font-weight-bold m-0">Intensivo</h5>
-                    <!-- <hr style="background-image: linear-gradient(90deg,#39528b,  #233b6b ); height:3px"> -->
-                    <p class="grey-text mb-md-0 mt-4 mb-5">Aprender un segundo idioma forma parte importante de las 
-                        habilidades hoy en día es por eso que Bachillerato imparte inglés intensivo de acuerdo al nivel de cada estudiante.</p>
+                    <p class="grey-text mb-md-0 mt-4 mb-5">Saber un segundo idioma forma parte de las 
+                    habilidades hoy en día es por eso que Bachillerato imparte inglés intensivo de acuerdo al nivel de cada estudiante.</p>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-12 col-sm-6 col-lg mb-4">
                     <img src="images/3dprinter.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Aula</h5> 
                     <h5 class="font-weight-bold m-0">makersteam</h5>
-                    <p class="grey-text mb-md-0 mt-4 mb-5">Aplicar tecnologías a proyectos escolares y profesionales es 
+                    <p class="grey-text mb-md-0 mt-4 mb-5">Aplicar tecnologías en proyectos es 
                     indispensable. Aula MakerSteam cuenta con herramientas y asesoría para desarrollar proyectos innovadores de base tecnológica.</p>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-12 col-sm-6 col-lg mb-4">
                     <img src="images/old-school.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Convenios con</h5>
                     <h5 class="font-weight-bold grey-text mb-md-0 m-0">Universidades</h5>
                     <p class="grey-text mb-0 mt-4 mb-5">Convenios y alianzas con las universidades más importantes del país como el <strong>Tecnológico de Monterrey</strong> ,
-                    <strong>ITESO</strong>, <strong>Arkansas State University</strong>, <strong>Ibero Campus León</strong>, <strong>Universidad La Salle</strong>, entre otras.</p>
+                    <strong>ITESO</strong>, <strong>Ibero Campus León</strong>, <strong>Universidad La Salle</strong>, entre otras.</p>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-12 col-sm-6 col-lg mb-4">
                     <img src="images/education.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Acción</h5>
                     <h5 class="font-weight-bold grey-text mb-md-0 m-0">Tutorial</h5>
@@ -178,7 +177,7 @@
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-12 col-sm-6 col-lg mb-4">
                     <img src="images/idea.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Creativity</h5>
                     <h5 class="font-weight-bold grey-text mb-md-0 m-0">Fair</h5>
@@ -211,16 +210,16 @@
             <h1 class="text-center">High School Life</h1>
             <p class="page-description text-center">Momentos Anglo</p>
             <div class="tz-gallery">
-                <div class="row mb-3">
+                <div class="row">
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Prepa-0.png">
                                 <img src="images/Prepa-0.png" alt="Park" class="card-img-top img-fluid rounded-sm">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Prepa-5.png">
                                 <img src="images/Prepa-5.png" alt="Park" class="card-img-top img-fluid rounded-sm">
                             </a>
@@ -228,7 +227,7 @@
                     </div>
 
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Prepa-3.png">
                                 <img src="images/Prepa-3.png" alt="Park" class="card-img-top img-fluid rounded-sm">
                             </a>
@@ -237,7 +236,7 @@
                 </div>
                 <div class="row mb-3">
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Prepa-7.png">
                                 <img src="images/Prepa-7.png" alt="Park" class="card-img-top img-fluid rounded-sm">
                             </a>
@@ -245,7 +244,7 @@
                     </div>
 
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Prepa-6.png">
                                 <img src="images/Prepa-6.png" alt="Park" class="card-img-top img-fluid rounded-sm">
                             </a>
@@ -253,7 +252,7 @@
                     </div>
 
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Prepa-2.png">
                                 <img src="images/Prepa-2.png" alt="Park" class="card-img-top img-fluid rounded-sm">
                             </a>
