imagenes principales niveles margin 0

--- a/kindergarten.html
+++ b/kindergarten.html
@@ -122,7 +122,7 @@
                     <small><p>Incorporada a la <strong>SEP</strong> (Secretaría de Educación Pública) y contamos con la certificación de <strong>Bachillerato Internacional IB</strong>  en el Programa de la Escuela Primaria (PEP).</p></small>
 
                 </div>
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 m-0 p-0">
                     <img src="images/Kinder-0.png" class="img-fluid rounded-sm" alt="Responsive image">
                 </div>
             </div>
