--- a/bachillerato.html
+++ b/bachillerato.html
@@ -122,7 +122,7 @@
                         <p>Bachillerato cuenta con apoyo Psicopedagógico, Plan de Vida y Carrera y Escuela para Padres.</p>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 ">
+                <div class="col-12 col-lg-6 col-12 col-lg-6 m-0 p-0 ">
                     <img src="images/Prepa.png" class="img-fluid rounded-sm" alt="Responsive image">
                 </div>
             </div>
