index y video exalumnos

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 <div class="col-md-6 text-center text-md-left ml-5">
                                     <h1 class="">Vive la experiencia Anglo</h1>
                                     <p class="d-none d-md-block">Los retos los pone el mundo, nosotros las herramientas para superarlos.</p>
-                                    <p class="">¿Te gust    aría saber más?</p> 
+                                    <!-- <p class="">¿Te gustaría saber más?</p>  -->
                                     <a href="somos.html"><button type="button" class="btn btn-quieromas">Quiero saber más</button></a>
                                     
                                 </div>
