--- a/exalumnos.html
+++ b/exalumnos.html
@@ -131,7 +131,7 @@
         <div class="row my-5 py-5">
             <div class="wrapper">
                 <div class="col iframe-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/KSwxK4QTiDs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/yNDRzUkfJ0s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
