--- a/campus.html
+++ b/campus.html
@@ -185,16 +185,16 @@
             <h1 class="text-center">Instalaciones Anglo</h1>
             <p class="page-description text-center">Galería</p>
             <div class="tz-gallery">
-                <div class="row mb-3">
+                <div class="row">
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Instalaciones-3.png">
                                 <img src="images/Instalaciones-3.png" alt="Park" class="card-img-top">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Instalaciones-6.png">
                                 <img src="images/Instalaciones-6.png" alt="Park" class="card-img-top">
                             </a>
@@ -202,7 +202,7 @@
                     </div>
 
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Instalaciones-7.png">
                                 <img src="images/Instalaciones-7.png" alt="Park" class="card-img-top">
                             </a>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Instalaciones-8.png">
                                 <img src="images/Instalaciones-8.png" alt="Park" class="card-img-top">
                             </a>
@@ -219,7 +219,7 @@
                     </div>
 
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Instalaciones-9.png">
                                 <img src="images/Instalaciones-9.png" alt="Park" class="card-img-top">
                             </a>
@@ -227,7 +227,7 @@
                     </div>
 
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card mb-3">
                             <a class="lightbox" href="images/Instalaciones-4.png">
                                 <img src="images/Instalaciones-4.png" alt="Park" class="card-img-top">
                             </a>
