--- a/inscripciones.html
+++ b/inscripciones.html
@@ -160,8 +160,8 @@
     <hr>
 
     <div class="text-center mt-5">
-        <h1 class="text-center">Convenios Anglo</h1>
-        <small>Aquí encuentras las etiquetas para el nivel correspondiente.</small>
+        <h1 class="text-center">CONVENIOS ANGLO</h1>
+        <!-- <small>Aquí encuentras las etiquetas para el nivel correspondiente.</small> -->
     </div>
     
 
