--- a/inscripciones.html
+++ b/inscripciones.html
@@ -105,7 +105,7 @@
     <!--OTO-->
     <section class="text-center my-5">
         <!-- Section heading -->
-        <div class="container py-3">
+        <div class="container">
             <!-- Grid row -->
             <div class="row">
                 <!-- Grid column -->
