cambiar texto botones inscripciones

--- a/inscripciones.html
+++ b/inscripciones.html
@@ -113,7 +113,7 @@
                     <img src="images/Ins-kinder.png" alt="" style="max-width:100%;" class="rounded">
                     <h3 class="font-weight-bold mt-2">PreKinder / Kindergarten</h3>
                     <div class="col-12 text-center mb-5">
-                        <a href="documentos/Requisitos_Kindergarten_Ciclo 20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos Prekinder/Kindergarten</button></a>
+                        <a href="documentos/Requisitos_Kindergarten_Ciclo 20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos</button></a>
                     </div>
 
                 </div>
@@ -123,7 +123,7 @@
                     <img src="images/Ins-primaria.png" alt="" style="max-width:100%;" class="rounded">
                     <h3 class="font-weight-bold mt-2">Primaria</h3>
                     <div class="col-12 text-center mb-5">
-                        <a href="documentos/Requsitos_PrimariaCiclo20-21.pdf " target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos Primaria</button></a>
+                        <a href="documentos/Requsitos_PrimariaCiclo20-21.pdf " target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos</button></a>
                     </div>
                 </div>
                 <!-- Grid column -->
@@ -138,16 +138,16 @@
                     <img src="images/Ins-Secu.png" alt="" style="max-width:100%;" class="rounded">
                     <h3 class="font-weight-bold mt-2">Secundaria</h3>
                     <div class="col-12 text-center mb-5">
-                        <a href="documentos/Requisitos_Secundaria_Ciclo20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos Secundaria</button></a>
+                        <a href="documentos/Requisitos_Secundaria_Ciclo20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos</button></a>
                     </div>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-12 col-6 col-sm">
                     <img src="images/Ins-Prepa.png" alt="" style="max-width:100%;" class="rounded">
-                    <h3 class="font-weight-bold mt-2">Preparatoria</h3>
+                    <h3 class="font-weight-bold mt-2">Bachillerato</h3>
                     <div class="col-12 text-center mb-5">
-                        <a href="documentos/Requisitos _Bachillerato_Ciclo20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos Bachillerato</button></a>
+                        <a href="documentos/Requisitos _Bachillerato_Ciclo20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos</button></a>
                     </div>
                 </div>
                 <!-- Grid column -->
