Numero de whatsapp

--- a/inscripciones.html
+++ b/inscripciones.html
@@ -33,7 +33,7 @@
               <a class="fb-ic" href="https://twitter.com/MXanglo" target="_blank">
                   <i class="fab fa-twitter-square fa-s white-text mr-md-4 mr-3 fa-1x"></i>
               </a>
-              <a href="https://wa.link/xr1quy"><i class="fab fa-whatsapp fa-s mr-md-4 mr-3 fa-1x"></i>
+              <a href="https://wa.link/h4zyli"><i class="fab fa-whatsapp fa-s mr-md-4 mr-3 fa-1x"></i>
               </a>
               <a href="https://anglo.algebraix.com/" target="_blank">
                   <i class="fa fa-desktop fa-s white-text mr-md-2 mr-3 fa-1x "></i><small>Algebraix</small> 
@@ -206,7 +206,7 @@
                     herramientas académicas y tecnológicas para el desarrollo de las habilidades y destrezas que ayudan en su futuro
                     personal, universitario y profesional.</p>
                 </div>
-                <a href="https://wa.link/xr1quy" target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block"><i class="fab fa-whatsapp fa-s fa-1x mx-3"></i>Más información</button></a>
+                <a href="https://wa.link/h4zyli" target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block"><i class="fab fa-whatsapp fa-s fa-1x mx-3"></i>Más información</button></a>
             </div>
         </div>
     </div>
@@ -257,7 +257,7 @@
                 <div>
                     
                     <div class="text-center px-3">
-                        <a href="https://wa.link/xr1quy"><i class="fab fa-whatsapp mx-2 text-white"></i></a>753 119 62 82
+                        <a href="https://wa.link/h4zyli"><i class="fab fa-whatsapp mx-2 text-white"></i></a>753 119 62 82
                     </div>
                 </div>
                 </div>
