--- a/exalumnos.html
+++ b/exalumnos.html
@@ -33,7 +33,7 @@
               <a class="fb-ic" href="https://twitter.com/MXanglo" target="_blank">
                   <i class="fab fa-twitter-square fa-s white-text mr-md-4 mr-3 fa-1x"></i>
               </a>
-              <a href="https://wa.link/xr1quy"><i class="fab fa-whatsapp fa-s mr-md-4 mr-3 fa-1x"></i>
+              <a href="https://wa.link/h4zyli"><i class="fab fa-whatsapp fa-s mr-md-4 mr-3 fa-1x"></i>
               </a>
               <a href="https://anglo.algebraix.com/" target="_blank">
                   <i class="fa fa-desktop fa-s white-text mr-md-2 mr-3 fa-1x "></i><small>Algebraix</small> 
@@ -151,7 +151,7 @@
                 <a class="fb-ic" href="https://www.youtube.com/channel/UCN3pK19VnqY9pU1OlUkNBxw">
                     <i class="fab fa-youtube fa-s white-text mr-md-5 mr-3 fa-2x px-2"></i>
                 </a>
-                <a class="fb-ic" href="https://wa.link/xr1quy">
+                <a class="fb-ic" href="https://wa.link/h4zyli">
                     <i class="fab fa-whatsapp fa-s white-text mr-md-5 mr-3 fa-2x px-2"></i>
                 </a>
                 <a class="fb-ic" href="https://twitter.com/MXanglo">
@@ -183,7 +183,7 @@
                 <div>
                     
                     <div class="text-center px-3">
-                        <a href="https://wa.link/xr1quy"><i class="fab fa-whatsapp mx-2 text-white"></i></a>753 119 62 82
+                        <a href="https://wa.link/h4zyli"><i class="fab fa-whatsapp mx-2 text-white"></i></a>753 119 62 82
                     </div>
                 </div>
                 </div>
