--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark py-2">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand font-weight-bold" href="index.html">
                         <img src="images/colegioanglologo.png" alt="" id="imagenheader" class=" mx-2">
                         COLEGIO ANGLO
                     </a>
