--- a/index.html
+++ b/index.html
@@ -137,19 +137,19 @@
             <div id="niveles" class="container-fluid pb-1" height="100px">
                 <div class="row">
                    <div class="col-12 col-md col-lg text-center" style="background-color: #2BA94B">
-                        <h2 class=" display-5 text-weight-bold pt-5"><a href="prekinder.html">PreKinder</a></h2>
+                        <h3 class=" display-5 text-weight-bold pt-5"><a href="prekinder.html">Ludoteca & PreKinder</a></h3>
                     </div>
                     <div class="col-12 col-md col-lg text-center" style="background-color: #445C96">
-                        <h2 class="display-5 text-weigh0t-bold pt-5"><a href="kindergarten.html">Kindergarten</a></h2>
+                        <h3 class="display-5 text-weigh0t-bold pt-5"><a href="kindergarten.html">Kindergarten</a></h3>
                     </div>
                     <div class="col-12 col-md col-lg text-center" style="background-color: #D1313F">
-                        <h2 class="display-5 text-weight-bold pt-5"><a href="primaria.html">Primaria</a></h2>
+                        <h3 class="display-5 text-weight-bold pt-5"><a href="primaria.html">Primaria</a></h3>
                     </div>
                     <div class="col-12 col-md-6 col-lg text-center" style="background-color: #F44A29">
-                        <h2 class="display-5 text-weight-bold pt-5"><a href="secundaria.html">Secundaria</a></h2>
+                        <h3 class="display-5 text-weight-bold pt-5"><a href="secundaria.html">Secundaria</a></h3>
                     </div>
                     <div class="col-12 col-md-6 col-lg text-center" style="background-color: #39528B">
-                        <h2 class="display-5 text-weight-bold pt-5"><a href="bachillerato.html">Bachillerato</a></h2>
+                        <h3 class="display-5 text-weight-bold pt-5"><a href="bachillerato.html">Bachillerato</a></h3>
                     </div>
                 </div>
             </div>
