--- a/index.html
+++ b/index.html
@@ -134,22 +134,22 @@
 
     <!--Niveles educativos-->
         <section id="niveles-educativos">
-            <div id="niveles" class="container-fluid pb-1" height="100px">
+            <div id="niveles" class="container-fluid pb-1" height="90px">
                 <div class="row">
-                   <div class="col-12 col-md col-lg text-center" style="background-color: #2BA94B">
-                        <h3 class=" display-5 text-weight-bold pt-5"><a href="prekinder.html">Ludoteca & PreKinder</a></h3>
+                   <div class="col-12 col-md col-lg d-flex align-items-center justify-content-center" style="background-color: #2BA94B">
+                        <h3 class=" display-5 text-weight-bold text-center"><a href="prekinder.html">Ludoteca & PreKinder</a></h3>
                     </div>
-                    <div class="col-12 col-md col-lg text-center" style="background-color: #445C96">
-                        <h3 class="display-5 text-weigh0t-bold pt-5"><a href="kindergarten.html">Kindergarten</a></h3>
+                    <div class="col-12 col-md col-lg d-flex align-items-center justify-content-center" style="background-color: #445C96">
+                        <h3 class="display-5 text-weight-bold text-center"><a href="kindergarten.html">Kindergarten</a></h3>
                     </div>
-                    <div class="col-12 col-md col-lg text-center" style="background-color: #D1313F">
-                        <h3 class="display-5 text-weight-bold pt-5"><a href="primaria.html">Primaria</a></h3>
+                    <div class="col-12 col-md col-lg d-flex align-items-center justify-content-center" style="background-color: #D1313F">
+                        <h3 class="display-5 text-weight-bold text-center"><a href="primaria.html">Primaria</a></h3>
                     </div>
-                    <div class="col-12 col-md-6 col-lg text-center" style="background-color: #F44A29">
-                        <h3 class="display-5 text-weight-bold pt-5"><a href="secundaria.html">Secundaria</a></h3>
+                    <div class="col-12 col-md col-lg d-flex align-items-center justify-content-center" style="background-color: #F44A29">
+                        <h3 class="display-5 text-weight-bold text-center"><a href="secundaria.html">Secundaria</a></h3>
                     </div>
-                    <div class="col-12 col-md-6 col-lg text-center" style="background-color: #39528B">
-                        <h3 class="display-5 text-weight-bold pt-5"><a href="bachillerato.html">Bachillerato</a></h3>
+                    <div class="col-12 col-md col-lg d-flex align-items-center justify-content-center" style="background-color: #39528B">
+                        <h3 class="display-5 text-weight-bold text-center"><a href="bachillerato.html">Bachillerato</a></h3>
                     </div>
                 </div>
             </div>
