Titulo de colegioanglo

--- a/bachillerato.html
+++ b/bachillerato.html
@@ -43,10 +43,10 @@
             </div>
         </div>
         <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark py-2">
-                <a class="navbar-brand" href="index.html">
-                    <img src="images/colegioanglologo.png" alt="" id="imagenheader" class=" mx-2">
-                    COLEGIO ANGLO
-                </a>
+            <a class="navbar-brand font-weight-bold" href="index.html">
+                <img src="images/colegioanglologo.png" alt="" id="imagenheader" class=" mx-2">
+                COLEGIO ANGLO
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -141,49 +141,39 @@
             <!-- Grid row -->
             <div class="row">
                 <!-- Grid column -->
-                <div class="col-12 col-sm-6 col-lg mb-4">
+                <div class="col-12 col-sm-6 col-lg my-4">
                     <img src="images/english.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Inglés</h5>
                     <h5 class="font-weight-bold m-0">Intensivo</h5>
-                    <p class="grey-text mb-md-0 mt-4 mb-5">Saber un segundo idioma forma parte de las 
-                    habilidades hoy en día es por eso que Bachillerato imparte inglés intensivo de acuerdo al nivel de cada estudiante.</p>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-12 col-sm-6 col-lg mb-4">
+                <div class="col-12 col-sm-6 col-lg my-4">
                     <img src="images/3dprinter.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Aula</h5> 
                     <h5 class="font-weight-bold m-0">makersteam</h5>
-                    <p class="grey-text mb-md-0 mt-4 mb-5">Aplicar tecnologías en proyectos es 
-                    indispensable. Aula MakerSteam cuenta con herramientas y asesoría para desarrollar proyectos innovadores de base tecnológica.</p>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-12 col-sm-6 col-lg mb-4">
+                <div class="col-12 col-sm-6 col-lg my-4">
                     <img src="images/old-school.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Convenios con</h5>
                     <h5 class="font-weight-bold grey-text mb-md-0 m-0">Universidades</h5>
-                    <p class="grey-text mb-0 mt-4 mb-5">Convenios y alianzas con las universidades más importantes del país como el <strong>Tecnológico de Monterrey</strong> ,
-                    <strong>ITESO</strong>, <strong>Ibero Campus León</strong>, <strong>Universidad La Salle</strong>, entre otras.</p>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-12 col-sm-6 col-lg mb-4">
+                <div class="col-12 col-sm-6 col-lg my-4">
                     <img src="images/education.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Acción</h5>
                     <h5 class="font-weight-bold grey-text mb-md-0 m-0">Tutorial</h5>
-                    <p class="grey-text mt-4 mb-5">Los alumnos cuentan con un asesor que funge como mentor dentro de la escuela para impulsar el 
-                    desarrollo y fortalecer las habilidades y aptitudes de los estudiantes.</p>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-12 col-sm-6 col-lg mb-4">
+                <div class="col-12 col-sm-6 col-lg my-4">
                     <img src="images/idea.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Creativity</h5>
                     <h5 class="font-weight-bold grey-text mb-md-0 m-0">Fair</h5>
-                    <p class="grey-text mt-4 mb-5">Uno de los eventos más importantes, en donde los alumnos ponen a prueba sus conocimientos para 
-                    desarrollar soluciones a problemáticas sociales, ambientales o tecnológicas.</p>
-                </div>
+                 </div>
                 <!-- Grid column -->
             </div>
             <!-- Grid row -->
