--- a/inscripciones.html
+++ b/inscripciones.html
@@ -42,10 +42,10 @@
           </div>
       </div>
       <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark py-2">
-              <a class="navbar-brand" href="index.html">
-                  <img src="images/colegioanglologo.png" alt="" id="imagenheader" class=" mx-2">
-                  COLEGIO ANGLO
-              </a>
+            <a class="navbar-brand font-weight-bold" href="index.html">
+                <img src="images/colegioanglologo.png" alt="" id="imagenheader" class=" mx-2">
+                COLEGIO ANGLO
+            </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -111,7 +111,7 @@
                 <!-- Grid column -->
                 <div class="col-12 col-6 col-sm">
                     <img src="images/Ins-kinder.png" alt="" style="max-width:100%;" class="rounded">
-                    <h3 class="font-weight-bold mt-2">PreKinder / Kindergarten</h3>
+                    <h3 class="font-weight-bold mt-2">PreKinder / Kinder</h3>
                     <div class="col-12 text-center mb-5">
                         <a href="documentos/Requisitos_Kindergarten_Ciclo 20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos</button></a>
                     </div>
