--- a/secundaria.html
+++ b/secundaria.html
@@ -43,10 +43,10 @@
             </div>
         </div>
         <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark py-2">
-                <a class="navbar-brand" href="index.html">
-                    <img src="images/colegioanglologo.png" alt="" id="imagenheader" class=" mx-2">
-                    COLEGIO ANGLO
-                </a>
+            <a class="navbar-brand font-weight-bold" href="index.html">
+                <img src="images/colegioanglologo.png" alt="" id="imagenheader" class=" mx-2">
+                COLEGIO ANGLO
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -131,61 +131,47 @@
     <hr>
 
     <!--OTO-->
-    <section class="text-center mb-3 mt-4">
+    <section class="text-center my-5">
         <!-- Section heading -->
         <div class="container">
                 <h1 class="text-center">Secundaria Anglo</h1>
                 <p class="page-description text-center mb-3">Una etapa importante merece el mejor apoyo</p>
             <!-- Grid row -->
-            <div class="row ">
-
+            <div class="row">
                 <!-- Grid column -->
-                <div class="col-12 col-sm-6 col-lg">
+                <div class="col-12 col-sm-6 col-lg my-4">
                     <img src="images/english.svg" alt="" style="max-width:35%;"  class="mb-3">
                     <h5 class="font-weight-bold m-1">Inglés</h5>
                     <h5 class="font-weight-bold m-0">Intensivo</h5>
-                    <p class="grey-text mb-md-0 mt-4 mb-5">Dominar el idioma inglés forma parte importante de las habilidades hoy en día, es por eso que 
-                        Secundaria imparte inglés intensivo de acuerdo a su nivel. Certificándose por parte de University of Cambridge.</p>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-12 col-sm-6 col-lg">
+                <div class="col-12 col-sm-6 col-lg my-4">
                     <img src="images/3dprinter.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Aula</h5>
                     <h5 class="font-weight-bold m-0"> makersteam </h5>
-                    <p class="grey-text mb-md-0 mt-4 mb-5">Aplicar tecnologías a proyectos escolares y
-                        personales es indispensable. El MakerSteam cuenta con las herramientas y la asesoría para desarrollar proyectos.
-                    </p>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-12 col-sm-6 col-lg">
+                <div class="col-12 col-sm-6 col-lg my-4">
 
                     <img src="images/psychologist.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Apoyo</h5>
                     <h5 class="font-weight-bold m-0">Psicopedagógico</h5>
-                    <p class="grey-text mb-0  mt-4 mb-5">Una persona especializada acompaña a los alumnos en la etapa de secundaria para ayudar a crecer a los alumnos
-                    y potenciar sus habilidades académicas y personales.</p>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-12 col-sm-6 col-lg">
+                <div class="col-12 col-sm-6 col-lg my-4">
                     <img src="images/education.svg" alt="" style="max-width:35%;"  class="mb-3">
                     <h5 class="font-weight-bold my-1">Acción</h5> 
                     <h5 class="font-weight-bold m-0">Tutorial</h5>
-                    <p class="grey-text mb-0  mt-4 mb-5">Los alumnos cuentan con un asesor que funge como mentor dentro de la escuela
-                        para impulsar el desarrollo y fortalecer las habilidades y aptitudes de los estudiantes.</p>
-
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-12 col-sm-6 col-lg">
+                <div class="col-12 col-sm-6 col-lg my-4">
                     <img src="images/chip.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold my-1">Anglo</h5> 
-                    <h5 class="font-weight-bold m-0">PRO</h5>
-                    <p class="grey-text mb-0  mt-4">Un evento importante en donde los alumnos desafìan sus conocimientos, creatividad e 
-                        ingenio para desarrollar soluciones, propuestas y prototipos a problemáticas sociales, 
-                        ambientales o tecnológicas.</p>                
+                    <h5 class="font-weight-bold m-0">PRO</h5>          
                 </div>
                 <!-- Grid column -->
             </div>
