--- a/kindergarten.html
+++ b/kindergarten.html
@@ -45,10 +45,10 @@
             </div>
         </div>
         <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark py-2">
-                <a class="navbar-brand" href="index.html">
-                    <img src="images/colegioanglologo.png" alt="" id="imagenheader" class=" mx-2">
-                    COLEGIO ANGLO
-                </a>
+            <a class="navbar-brand font-weight-bold" href="index.html">
+                <img src="images/colegioanglologo.png" alt="" id="imagenheader" class=" mx-2">
+                COLEGIO ANGLO
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
