--- a/modelo.html
+++ b/modelo.html
@@ -143,7 +143,7 @@
             <!-- Grid row -->
             <div class="row pb-3">
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-6 col-md-2 col-lg">
                     <img src="images/loupe.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Indagadores</h5>
                     <!-- <p class="grey-text mb-md-0 mb-5">Desarrollan su curiosidad natural y demuestran autonomía en su
@@ -151,7 +151,7 @@
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-6 col-md-2 col-lg">
                     <img src="images/help.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Informados e Instruidos</h5>
                     <!-- <p class="grey-text mb-md-0 mb-5">Exploran conceptos, ideas y cuestiones de importancia local y mundial.
@@ -159,7 +159,7 @@
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-6 col-md-2 col-lg">
                     <img src="images/innovation.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Pensadores</h5>
                     <!-- <p class="grey-text mb-0 mb-3">Aplican, por propia iniciativa, sus habilidades intelectuales de manera
@@ -167,17 +167,25 @@
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-6 col-md-2 col-lg">
                     <img src="images/comunicadores.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Buenos Comunicadores</h5>
                     <!-- <p class="grey-text mb-0">Expresan ideas e información con confianza y creatividad.</p> -->
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md mb-4">
+                <div class="col-6 col-md-2 col-lg mb-4">
                     <img src="images/integridad.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Integros</h5>
                     <!-- <p class="grey-text mb-0">Actúan con honradez, equidad, justicia, tolerancia y respeto.</p> -->
+                </div>
+                <!-- Grid column -->
+                <!-- Grid column -->
+                <div class="col-6 col-md-2 col-lg">
+                    <img src="images/charity.svg" alt="" style="max-width:35%;">
+                    <h5 class="font-weight-bold mt-2">Solidarios</h5>
+                    <!-- <p class="grey-text mb-md-0 mb-5">Muestran empatía, sensibilidad y respeto por las necesidades y
+                    sentimientos de los demás.</p> -->
                 </div>
                 <!-- Grid column -->
             </div>
@@ -186,14 +194,6 @@
         <div class="container">
             <!-- Grid row -->
             <div class="row">
-                <!-- Grid column -->
-                <div class="col-6 col-md">
-                    <img src="images/charity.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Solidarios</h5>
-                    <!-- <p class="grey-text mb-md-0 mb-5">Muestran empatía, sensibilidad y respeto por las necesidades y
-                    sentimientos de los demás.</p> -->
-                </div>
-                <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md">
                     <img src="images/man-jumping-up.svg" alt="" style="max-width:35%;">
