--- a/modelo.html
+++ b/modelo.html
@@ -141,10 +141,10 @@
          </div>
         <div class="container">
             <!-- Grid row -->
-            <div class="row pb-3">
+            <div class="row mb-5">
                 <!-- Grid column -->
                 <div class="col-6 col-md-2 col-lg">
-                    <img src="images/loupe.svg" alt="" style="max-width:35%;">
+                    <img src="images/loupe.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Indagadores</h5>
                     <!-- <p class="grey-text mb-md-0 mb-5">Desarrollan su curiosidad natural y demuestran autonomía en su
                         aprendizaje.</p> -->
@@ -152,7 +152,7 @@
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md-2 col-lg">
-                    <img src="images/help.svg" alt="" style="max-width:35%;">
+                    <img src="images/help.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Informados e Instruidos</h5>
                     <!-- <p class="grey-text mb-md-0 mb-5">Exploran conceptos, ideas y cuestiones de importancia local y mundial.
                     </p> -->
@@ -160,7 +160,7 @@
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md-2 col-lg">
-                    <img src="images/innovation.svg" alt="" style="max-width:35%;">
+                    <img src="images/innovation.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Pensadores</h5>
                     <!-- <p class="grey-text mb-0 mb-3">Aplican, por propia iniciativa, sus habilidades intelectuales de manera
                         crítica y creativa</p> -->
@@ -168,21 +168,21 @@
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md-2 col-lg">
-                    <img src="images/comunicadores.svg" alt="" style="max-width:35%;">
+                    <img src="images/comunicadores.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Buenos Comunicadores</h5>
                     <!-- <p class="grey-text mb-0">Expresan ideas e información con confianza y creatividad.</p> -->
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md-2 col-lg mb-4">
-                    <img src="images/integridad.svg" alt="" style="max-width:35%;">
+                    <img src="images/integridad.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Integros</h5>
                     <!-- <p class="grey-text mb-0">Actúan con honradez, equidad, justicia, tolerancia y respeto.</p> -->
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md-2 col-lg">
-                    <img src="images/charity.svg" alt="" style="max-width:35%;">
+                    <img src="images/charity.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Solidarios</h5>
                     <!-- <p class="grey-text mb-md-0 mb-5">Muestran empatía, sensibilidad y respeto por las necesidades y
                     sentimientos de los demás.</p> -->
@@ -191,37 +191,37 @@
             </div>
             <!-- Grid row -->
         </div>
-        <div class="container">
+        <div class="container ">
             <!-- Grid row -->
-            <div class="row">
+            <div class="row d-flex justify-content-center">
                 <!-- Grid column -->
-                <div class="col-6 col-md">
-                    <img src="images/man-jumping-up.svg" alt="" style="max-width:35%;">
+                <div class="col-6 col-md-2">
+                    <img src="images/man-jumping-up.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Audaces</h5>
                     <!-- <p class="grey-text mb-md-0 mb-5">Exploran nuevos roles, ideas y estrategias.</p> -->
                 </div>
                 <!-- Grid column -->
 
                 <!-- Grid column -->
-                <div class="col-6 col-md">
-                    <img src="images/openmind.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">De Mentalidad abierta</h5>
+                <div class="col-6 col-md-2">
+                    <img src="images/openmind.svg" alt="" style="max-width:40%;">
+                    <h5 class="font-weight-bold mt-2">Mentalidad abierta</h5>
                     <!-- <p class="grey-text mb-0 mb-3">Entienden y aprecian las perspectivas, valores y tradiciones de otras 
                         personas y comunidades.</p> -->
                 </div>
                 <!-- Grid column -->
 
                 <!-- Grid column -->
-                <div class="col-6 col-md">
-                    <img src="images/equil.svg" alt="" style="max-width:35%;">
+                <div class="col-6 col-md-2">
+                    <img src="images/equil.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Equilibrados</h5>
                     <!-- <p class="grey-text mb-0">Entienden la importancia del equilibrio físico, mental y emocional.</p> -->
                 </div>
                 <!-- Grid column -->
 
                 <!-- Grid column -->
-                <div class="col-6 col-md">
-                    <img src="images/nube.svg" alt="" style="max-width:35%;">
+                <div class="col-6 col-md-2">
+                    <img src="images/nube.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Reflexivos</h5>
                     <!-- <p class="grey-text mb-0">Reconocen y comprenden sus cualidades y limitaciones para contribuir a su
                     aprendizaje y desarrollo personal.</p> -->
