--- a/modelo.html
+++ b/modelo.html
@@ -141,9 +141,9 @@
          </div>
         <div class="container">
             <!-- Grid row -->
-            <div class="row mb-5">
+            <div class="row d-flex justify-content-center mb-3">
                 <!-- Grid column -->
-                <div class="col-6 col-md-2 col-lg">
+                <div class="col-6 col-md-6 col-lg mb-3">
                     <img src="images/loupe.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Indagadores</h5>
                     <!-- <p class="grey-text mb-md-0 mb-5">Desarrollan su curiosidad natural y demuestran autonomía en su
@@ -151,7 +151,7 @@
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md-2 col-lg">
+                <div class="col-6 col-md-6 col-lg mb-3">
                     <img src="images/help.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Informados e Instruidos</h5>
                     <!-- <p class="grey-text mb-md-0 mb-5">Exploran conceptos, ideas y cuestiones de importancia local y mundial.
@@ -159,7 +159,7 @@
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md-2 col-lg">
+                <div class="col-6 col-md-6 col-lg mb-3">
                     <img src="images/innovation.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Pensadores</h5>
                     <!-- <p class="grey-text mb-0 mb-3">Aplican, por propia iniciativa, sus habilidades intelectuales de manera
@@ -167,21 +167,21 @@
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md-2 col-lg">
+                <div class="col-6 col-md-6 col-lg mb-3">
                     <img src="images/comunicadores.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Buenos Comunicadores</h5>
                     <!-- <p class="grey-text mb-0">Expresan ideas e información con confianza y creatividad.</p> -->
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md-2 col-lg mb-4">
+                <div class="col-6 col-md-6 col-lg mb-3 mb-4">
                     <img src="images/integridad.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Integros</h5>
                     <!-- <p class="grey-text mb-0">Actúan con honradez, equidad, justicia, tolerancia y respeto.</p> -->
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md-2 col-lg">
+                <div class="col-6 col-md-6 col-lg mb-3">
                     <img src="images/charity.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Solidarios</h5>
                     <!-- <p class="grey-text mb-md-0 mb-5">Muestran empatía, sensibilidad y respeto por las necesidades y
@@ -195,7 +195,7 @@
             <!-- Grid row -->
             <div class="row d-flex justify-content-center">
                 <!-- Grid column -->
-                <div class="col-6 col-md-2">
+                <div class="col-6 col-md-6 col-lg-2 mb-3">
                     <img src="images/man-jumping-up.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Audaces</h5>
                     <!-- <p class="grey-text mb-md-0 mb-5">Exploran nuevos roles, ideas y estrategias.</p> -->
@@ -203,7 +203,7 @@
                 <!-- Grid column -->
 
                 <!-- Grid column -->
-                <div class="col-6 col-md-2">
+                <div class="col-6 col-md-6 col-lg-2 mb-3">
                     <img src="images/openmind.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Mentalidad abierta</h5>
                     <!-- <p class="grey-text mb-0 mb-3">Entienden y aprecian las perspectivas, valores y tradiciones de otras 
@@ -212,7 +212,7 @@
                 <!-- Grid column -->
 
                 <!-- Grid column -->
-                <div class="col-6 col-md-2">
+                <div class="col-6 col-md-6 col-lg-2 mb-3">
                     <img src="images/equil.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Equilibrados</h5>
                     <!-- <p class="grey-text mb-0">Entienden la importancia del equilibrio físico, mental y emocional.</p> -->
@@ -220,7 +220,7 @@
                 <!-- Grid column -->
 
                 <!-- Grid column -->
-                <div class="col-6 col-md-2">
+                <div class="col-6 col-md-6 col-lg-2 mb-3">
                     <img src="images/nube.svg" alt="" style="max-width:40%;">
                     <h5 class="font-weight-bold mt-2">Reflexivos</h5>
                     <!-- <p class="grey-text mb-0">Reconocen y comprenden sus cualidades y limitaciones para contribuir a su
