Campus - PreKinder y Kinder

--- a/campus.html
+++ b/campus.html
@@ -124,7 +124,7 @@
                             <li class="list-group-item">Laboratorios de Computo</li>
                             <li class="list-group-item">Sala de Artes y Música</li>                           
                             <li class="list-group-item">Salas multimedia y usos múltiples</li>
-                            <li class="list-group-item">Sala de estimulación temprana (Prekinder)</li>
+                            <li class="list-group-item">Sala de estimulación temprana (PreKinder)</li>
                         </ul>
                         <h6>Todas nuestras Aulas están Climatizadas para mayor comodidad de los alumnos.</h6>
                     </div>
@@ -140,9 +140,7 @@
 
         <div class="container">
             <div class="row pb-5 pt-5">
-                <div class="col-12 col-lg-6 align-self-center">
-                    <img src="images/Instalaciones-2.png" class="img-fluid" alt="Responsive image">
-                </div>
+
                 <div class="col-12 col-lg-6 text-left align-self-center">
                     <h5 class="mt-3 mb-1 text-center">SERVICIOS</h5>
                     <ul class="list-group list-group-flush">
@@ -151,6 +149,9 @@
                         <li class="list-group-item">Cafeterías</li>
                         <li class="list-group-item">Sistema de Seguridad de Circuito Cerrado</li>
                     </ul>
+                </div>
+                <div class="col-12 col-lg-6 align-self-center">
+                    <img src="images/Instalaciones-2.png" class="img-fluid" alt="Responsive image">
                 </div>
             </div>
         </div>
@@ -168,7 +169,7 @@
                             <li class="list-group-item">Canchas de Squash</li>
                             <li class="list-group-item">Áreas verdes</li>
                             <li class="list-group-item">Áreas de juegos para Primaria</li>
-                            <li class="list-group-item">Área de juegos para Kinder y Prekinder</li>
+                            <li class="list-group-item">Área de juegos para PreKinder y Kinder</li>
                         </ul>
                 </div>
                 <div class="col-12 col-lg-6 align-self-center">
