Extraescolares - rejilla iconos tamaños

--- a/extraescolares.html
+++ b/extraescolares.html
@@ -138,20 +138,20 @@
             <!-- Grid row -->
             <div class="row pb-3">
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-md">
                     <img src="images/basquetbol.png" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Basquetbol</h5>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-md">
                     <img src="images/danza.png" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Danza</h5>
                     </p>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-md">
                     <img src="images/Futbol.png" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Futbol</h5>
                 </div>
@@ -163,20 +163,20 @@
             <!-- Grid row -->
             <div class="row">
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-md">
                     <img src="images/Voleybol.png" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Voleybol</h5>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
+                <div class="col-md">
                     <img src="images/natacion.png" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Natación</h5>
                 </div>
                 <!-- Grid column -->
 
                 <!-- Grid column -->
-                <div class="col-6 col-md my-3">
+                <div class="col-md my-3">
                     <img src="images/gym.png" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Acondicionamiento Físico</h5>
                     <p class="grey-text mb-md-0 mb-5">(Bachillerato)</p>
