--- a/prekinder.html
+++ b/prekinder.html
@@ -109,7 +109,7 @@
                         <h5 class="font-weight-normal">Los primeros pasos de una persona marcan un buen futuro.</h5>
                     </div>
                     <div class="text-justify">
-                        <p>En esta etapa los niños descubren nuevas habilidades, conocen más acerca del mundo; es por eso que Prekinder es un sistema 
+                        <p>En esta etapa los niños descubren nuevas habilidades, conocen más acerca del mundo; es por eso que PreKinder es un sistema 
                         diseñado para niños menores de 3 años que busca impulsar habilidades tempranas mediante la indagación. </p>
                         
                         <p> Fortalecer el autoestima 
@@ -128,7 +128,7 @@
 <hr>
     <div class="container pb-4 my-5">
             <h2 class="h1-responsive font-weight-bold mt-5 text-center">Explorando el mundo para un futuro mejor</h2>
-            <p class="page-description text-center">Nuestros alumnos de prekinder estarán inmersos en un ambiente bilingüe y transdisciplinario 
+            <p class="page-description text-center">Nuestros alumnos de PreKinder estarán inmersos en un ambiente bilingüe y transdisciplinario 
             que promueve la exploración y le ayudará a desarrollarse en 4 competencias principales:</p>
         <div class="row my-4 text-center">
             <div class="col-12 col-md mb-4">
